fix: [PL-20663]: refresh should update all error count, fixed truncation (#6145)

--- a/src/modules/40-gitsync/components/GitSyncErrorMessage/GitSyncErrorMessage.module.scss
+++ b/src/modules/40-gitsync/components/GitSyncErrorMessage/GitSyncErrorMessage.module.scss
@@ -1,6 +1,15 @@
 .gitSyncErrorMessage {
   margin-bottom: var(--spacing-medium);
   .section {
+    .title {
+      white-space: nowrap !important;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      padding-right: var(--spacing-small);
+    }
+    .titleDirection {
+      direction: rtl;
+    }
     &:not(:last-child) {
       border-bottom: 1px solid var(--grey-100);
       margin-bottom: var(--spacing-small) !important;
